# test-task-notes-crud

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  example.env  pyproject.toml  pytest.ini  setup.cfg
backend/: utils.py
backend/api/: urls.py
backend/app/: settings.py  urls.py
backend/notes/: admin.py  dto.py  enums.py  models.py  permissions.py  routers.py  serializers.py  urls.py  utils.py  views.py
backend/notes/logic/: exceptions.py  interactors.py
backend/notes/migrations/: 0001_initial.py
backend/tests/: conftest.py  factories.py
backend/tests/api/: test_notes.py  test_users.py
backend/users/: admin.py  enums.py  models.py  permission.py  routers.py  serializers.py  urls.py  utils.py  views.py
backend/users/logic/: exceptions.py  interactors.py  selectors.py
backend/users/migrations/: 0001_initial.py  0002_alter_profile_user.py
nginx/: Dockerfile  nginx.conf
